[gd_scene load_steps=3 format=2]

[ext_resource path="res://objects/Villager.gd" type="Script" id=1]
[ext_resource path="res://objects/Character.tscn" type="PackedScene" id=2]

[node name="Villager" groups=[
"villager",
] instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="DropFoodTimer" type="Timer" parent="." index="3"]
one_shot = true

[node name="WaitTimer" type="Timer" parent="." index="4"]
one_shot = true

[connection signal="timeout" from="DropFoodTimer" to="." method="_on_DropFoodTimer_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
